chore: remove unused stuff (#69)